--- a/posts/p201206-asset.md
+++ b/posts/p201206-asset.md
@@ -1,218 +1,314 @@
 # Đóng gói và truy cập asset trong Unity
 
 > Bài viết dựa trên kinh nghiệm cá nhân của tác giả khi làm việc với
-> Asset Bundles trong một số dự án game. Addressables cũng là một
-> công cụ hữu ích, nhưng sẽ không được đề cập trong bài viết này
-> vì tác giả chưa rành cách xài :>
+> Asset Bundle trong các dự án game. Một số phần code có tham khảo
+> từ đồng nghiệp.
 
-## Giới thiệu
+---
+
+Mục lục
+
+* [I. Giới thiệu](#intro)
+* [II. Tổ chức](#setup)
+* [III. Truy cập](#loading)
+* [IV. Đóng gói](#build)
+* [V. Kết luận](#conclusion)
+* [VI. Mã nguồn](#source)
+
+---
+
+## <a name="intro"></a> I. Giới thiệu
 
 Khi làm một dự án Unity mà số lượng asset tương đối lớn, ta không thể
 chỉ dùng ScriptableObject hoặc thư mục Resources để quản lý các asset
-này. May thay, Asset Bundles là một giải pháp rất tốt. Ta có thể phân
+này. May thay, Asset Bundle là một giải pháp rất tốt. Ta có thể phân
 các asset vào những nhóm nhỏ dựa trên công dụng hoặc nội dung của
 chúng và cho vào từng bundle riêng. Các bundle này có thể được đóng
 gói chung với game hoặc để trên server và tải xuống sau ở dạng DLC.
 
 Bài viết này cung cấp một "dàn ý" về cách lưu trữ asset trong các
-Asset Bundles cũng như cách quản lý và truy cập những asset này trong
+Asset Bundle cũng như cách quản lý và truy cập những asset này trong
 lúc chạy game.
 
-## Chuẩn bị
+---
 
-Để đưa asset vào một bundle, cách thủ công là gán tên bundle cho nó
-ở cạnh dưới cửa sổ Inspector. Nhưng với số lượng asset khá lớn thì đó
-không phải cách hay. Thay vào đó, ta dùng **AssetBundle Browser**, một
-plugin do chính Unity cung cấp và có thể cài đặt thông qua Package
-Manager.
+## <a name="setup"></a> II. Tổ chức
 
-Cách sử dụng chi tiết của AssetBundle Browser có thể xem tại link sau:
+Asset có thể là một prefab, một tấm hình, một đoạn âm thanh, v.v. và
+sẽ được đặt trong một bundle nhất định. Game sẽ gồm nhiều bundle, mỗi
+bundle có tên và nội dung riêng.
 
-https://docs.unity3d.com/Manual/AssetBundles-Browser.html
+### II.1. Tên cho bundle
 
-Sau khi tạo các bundle tùy nhu cầu và kéo asset vào xong, chúng ta có
-thể tiến hành công đoạn đóng gói bằng nút `Build` trong cửa sổ plugin.
-Những bundle đã đóng gói sẽ nằm trong thư mục `StreamingAssets` nếu bạn
-có đánh dấu vào mục `Copy to StreamingAssets`.
+Trong bài này, ta sẽ quy định tên bundle như sau:
 
-> Trước khi build game, bạn nhớ chạy lệnh Build của AssetBundle Browser
-> để cập nhật đúng và đủ những asset cần sử dụng trong game.
+* Gồm một hoặc nhiều đoạn để thể hiện thứ bậc.
+* Mỗi đoạn đặt trong cặp dấu ( ) cho tách biệt với nhau.
 
-## Tải các bundle lên khi chạy game
+Ví dụ, cùng là asset cho UI, nhưng prefab để riêng, hình ảnh để riêng.
+Ta sẽ có 2 bundle như sau:
 
-Một khi đã chuẩn bị xong các asset bundle thì việc tải chúng lên bộ nhớ
-và truy cập các asset bên trong sẽ không quá phức tạp.
+* `(ui)(images)`
+* `(ui)(prefabs)`
 
-Ta tạo một class quản lý asset như sau:
+### II.2. Tên cho asset
+
+Như bạn đã (sẽ?) biết, để truy cập asset từ bundle, ta cần truyền cả tên
+của bundle lẫn tên của asset. Việc này không quá phiền phức nếu ta sắp
+đặt mọi thứ một cách cực kỳ quy củ. Nhưng đôi khi người viết code và
+người làm asset không có chung quan điểm về phân loại asset, nên việc
+tổ chức bundle lung tung là điều dễ xảy ra.
+
+Để tạo sự thuận tiện nhất định, ta sẽ viết một cơ chế truy cập asset
+chỉ cần dùng tên mà không quan tâm asset đó nằm ở bundle nào. Việc này
+được thực hiện bằng cách tạo một bảng ánh xạ từ tên asset sang tên bundle
+chứa nó. Bảng này hình thành lúc chạy game và nạp các bundle lên.
+
+Nhưng nếu tất cả mọi asset trong bundle đều được đưa vào bảng ánh xạ thì
+sẽ là dư thừa. Ví dụ, bạn cần truy cập một material, còn tấm texture
+mà nó sử dụng là gì thì không bao giờ phải trực tiếp truy cập tới. Vậy
+tấm texture đó không cần nằm trong bảng ánh xạ.
+
+Làm sao để phân loại hai kiểu asset như vậy? Giải pháp chúng ta sẽ dùng
+ở đây là: các asset nào muốn để vào bảng ánh xạ thì tên của nó sẽ bắt
+đầu bằng một ký tự đánh dấu, ví dụ `@`. Khi nạp bundle và tạo bảng
+ánh xạ, ta chỉ lấy các asset được đánh dấu này để đưa vào bảng.
+
+### II.3. Đưa asset vào bundle
+
+Để đưa asset vào bundle, ta có thể làm một trong các cách sau đây:
+
+1. Tự gắn tên bundle trong Inspector của asset.
+> Chọn asset, nhìn cửa sổ Inspector, khu vực dưới đáy, bạn sẽ
+> thấy chỗ chọn bundle và tạo bundle mới nếu chưa có.
+2. Dùng plugin _AssetBundle Browser_ do Unity cung cấp.
+> Plugin này có thể cài từ Package Manager của Unity.
+3. Viết code tự động hóa để gắn mọi asset có đánh dấu `@`
+vào bundle cùng tên với thư mục chứa nó.
+> Yêu cầu sắp xếp bundle ở dạng thư mục và không được lồng vào nhau.
+
+Với cách 1 và 3, ta sẽ cần thêm một phần code nữa để đóng gói các
+asset bundle trước khi build game. Riêng cách 2 thì chức năng
+đóng gói nằm sẵn trong cửa sổ AssetBundle Browser.
+
+Trong bài này, ta sẽ dùng **cách số 3**, với các quy tắc sau:
+
+* Mỗi bundle được đại diện bằng 1 thư mục.
+* Mỗi thư mục phải chứa ít nhất 1 asset có tên dạng `@something`.
+* Các asset dạng `@` không được trùng tên, cho dù khác bundle.
+
+### II.4. Thực hiện
+
+Trước tiên, trong khu vực Assets của dự án, bạn tạo một thư mục
+mới và đặt tên là `ABs`. Có thể chọn tên khác nếu thích. Đường
+dẫn của nó sẽ là:
+
+* `Assets/ABs/`
+
+Cho mục đích ví dụ, bạn tạo tiếp 3 thư mục con trong `ABs` và
+đặt tên lần lượt là:
+
+* `(common)`: chứa các asset chung chung của game.
+* `(ui)(images)`: chứa các asset dạng hình ảnh dùng cho UI.
+* `(ui)(prefabs)`: chứa các asset dạng prefab dùng cho UI.
+
+Đây sẽ là 3 asset bundle của game.
+
+Để các asset được gắn bundle một cách tự động khi ta bỏ chúng
+vào thư mục tương ứng, ta cần viết một ít code. Trong thư mục
+`Scripts`, bạn tạo một thư mục có tên chính xác là `Editor`
+và thêm tập tin script với nội dung như
+[mã nguồn này](#source-assetbundleautotagger).
+
+Chờ code compile, và thử chép một tập tin hình vào `(ui)(images)`,
+bạn nhìn Inspector sẽ thấy asset hình đã được tự động gắn vào
+bundle cùng tên. Nếu di chuyển asset từ thư mục bundle này sang
+thư mục bundle khác, nó cũng sẽ được thay đổi bundle tương ứng.
+
+---
+
+## <a name="loading"></a> III. Truy cập
+
+Một khi đã chuẩn bị xong các asset bundle thì việc tải chúng lên
+bộ nhớ và truy cập các asset bên trong sẽ không quá phức tạp.
+
+Cũng trong thư mục `Scripts`, bạn tạo một thư mục tên là `GameAsset`
+và thêm script `GameAssetManager`. Nội dung của script sẽ
+giống như [mã nguồn này](#source-gameassetmanager).
+
+Trong scene khởi động của game, bạn tạo một _GameObject_ mới
+và gắn component `GameAssetManager`. Do được thiết kế
+dạng **singleton**, object này sẽ tồn tại xuyên suốt các
+scene cho tới khi tắt game. Nhớ đặt tên cho dễ nhận biết.
+
+Sau khi gắn component, trong phần inspector của `GameAssetManager`,
+bạn tìm mục `Bundle Names` và thêm tên của 3 bundle đã tạo.
+
+Giờ, ví dụ ta cần load một sprite tên là `@btn_yellow` để gắn vào một
+đối tượng Image của UI, ta có code đại khái như sau:
 
 ```csharp
-using System.Collections.Generic;
-using UnityEngine;
+    var sprite = GameAssetManager.Instance.LoadAsset<Sprite>("@btn_yellow");
+    myButtonImage.sprite = sprite;
+```
 
-public sealed class GameAssetManager : MonoBehaviour
+---
+
+## <a name="build"></a> IV. Đóng gói
+
+Để sử dụng asset bundle trong bản build của game, ta cần đóng gói
+chúng thành các tập tin và cho vào thư mục `Assets/StreamingAssets`.
+Việc này không thực hiện bằng tay mà thông qua một API do Unity
+cung cấp. Ta sẽ viết code sử dụng API này, kèm theo một vài
+thiết lập khác cho phù hợp với nhu cầu của mình.
+
+Trong thư mục `Scripts/Editor`, bạn tạo script mới với tên là
+`AssetBundleBuilder` cùng nội dung giống như
+[mã nguồn này](#source-assetbundlebuilder).
+
+Sau khi code compile xong, bạn sẽ thấy trên thanh trình đơn
+của Unity Editor đã xuất hiện mục `anhdev/PreBuild` với 2 lệnh
+đóng gói asset bundle cho Android và iOS.
+
+Mỗi khi chuẩn bị build game, bạn sẽ cần gọi lệnh đóng gói
+từ trình đơn này để cập nhật asset bundle vào StreamingAssets.
+Nếu không, bản build có thể thiếu asset hoặc chứa asset
+cũ từ lần build trước.
+
+> Riêng trên editor thì không cần phải đóng gói trước, trừ phi
+> bạn đặt _useAssetDatabase = false trong GameAssetManager.
+
+---
+
+## <a name="conclusion"></a> V. Kết luận
+
+Tới đây thì mọi thứ đã thiết lập xong và bạn đã có thể bắt tay
+vào sử dụng "mini framework" mà chúng ta vừa thiết lập. Dĩ
+nhiên còn khá nhiều thứ để cải tiến. Danh sách bundle vẫn đang
+để trong `GameAssetManager`. Nếu đặt trong một tập tin riêng
+thì sẽ dễ kiểm soát hơn. Hàm `LoadAsset` cũng đang chạy ở
+dạng synchronous nên game sẽ bị khựng nếu asset tương đối lớn.
+Bạn có thể nghiên cứu sử dụng `LoadAssetAsync` để giúp trải
+nghiệm của người dùng được tốt hơn.
+
+Hy vọng thông qua bài viết này, tác giả đã mang lại một
+cái nhìn tương đối đầy đủ về giải pháp quản lý asset trong game
+bằng asset bundle, để từ đó bạn có thể phát triển lên thành
+một bộ code hoàn chỉnh và cứng cáp nhằm phục vụ cho dự án
+game của bản thân hoặc studio.
+
+Cảm ơn bạn đã ghé chơi và đọc bài viết này.
+Mọi góp ý và thắc mắc, xin liên lạc với tác giả thông qua
+Twitter hoặc Facebook (link cuối trang). Xin chào và hẹn
+ngày tái ngộ.
+
+---
+
+## <a name="source"></a> VI. Mã nguồn
+
+### <a name="source-assetbundleautotagger"></a> AssetBundleAutoTagger
+
+```csharp
+using System.IO;
+using UnityEditor;
+
+// Đây là một script tự động hóa, sử dụng API của Unity.
+public class AssetBundleAutoTagger : AssetPostprocessor
 {
-    public static GameAssetManager Instance { get; private set; }
+    // Nếu không dùng tên "ABs", nhớ sửa đường dẫn này.
+    private const string PathPrefix = "Assets/ABs/";
 
-    public void Awake()
+    // Hàm này sẽ được gọi khi có thay đổi về asset.
+    // Ta chỉ cần kiểm tra các asset mới import và
+    // các asset được di chuyển từ thư mục này qua
+    // thư mục khác.
+    private static void OnPostprocessAllAssets(
+        string[] importedAssets, string[] deletedAssets,
+        string[] movedAssets, string[] movedFromAssetPaths)
     {
-        if (Instance == null)
+        for (int i = 0, c = importedAssets.Length; i < c; ++i)
         {
-            Instance = this;
-            DontDestroyOnLoad(gameObject);
+            var path = importedAssets[i];
 
-            // hàm này từ từ sẽ có
-            preloadBundles();
+            if (AssetDatabase.IsValidFolder(path)) continue;
+
+            path = path.Replace('\\', '/');
+            if (path.StartsWith(PathPrefix))
+            {
+                process(path);
+            }
         }
-        else if (Instance != this)
+
+        for (int i = 0, c = movedAssets.Length; i < c; ++i)
         {
-            Destroy(gameObject);
+            var path = movedAssets[i];
+
+            if (AssetDatabase.IsValidFolder(path)) continue;
+
+            path = path.Replace('\\', '/');
+            if (path.StartsWith(PathPrefix))
+            {
+                process(path);
+            }
+        }
+    }
+
+    private static void process(string path)
+    {
+        var subPath = path.Substring(PathPrefix.Length);
+        var folder = subPath.Substring(0, subPath.IndexOf('/'));
+
+        var importer = AssetImporter.GetAtPath(path);
+        var name = Path.GetFileNameWithoutExtension(path);
+
+        // Chỉ được dùng 1 dấu @ trong tên.
+        if (subPath.IndexOf('@') != subPath.LastIndexOf('@')) return;
+
+        if (name.StartsWith("@"))
+        {
+            if (importer.assetBundleName != folder)
+            {
+                importer.SetAssetBundleNameAndVariant(
+                    folder, importer.assetBundleVariant);
+            }
         }
     }
 }
 ```
 
-Theo đoạn code trên, bạn có thể thấy chúng ta sẽ dùng một thực thể
-dạng singleton để quản lý việc tải bundle và truy xuất asset. Bạn
-hoàn toàn có thể dùng một mô hình khác nếu không thích singleton.
-
-Qua Unity, chờ compile xong code mới, ta tạo một GameObject trong
-scene khởi động của game (scene đầu tiên mở ra khi chạy game) và
-thêm component `GameAssetManager`. Nếu không đụng chạm gì nữa thì
-GameObject này sẽ tồn tại cho tới khi tắt game.
-
-> Nhớ đặt tên cho GameObject đó để dễ phân biệt.
-
-Chúng ta tiếp tục khai báo một danh sách các bundle có trong game:
+### <a name="source-gameassetmanager"></a> GameAssetManager
 
 ```csharp
-    private static readonly string[] bundleNames =
-    {
-        "(common)",
-        "(model)(islands)",
-        "(model)(people)",
-        "(shader)(plant)",
-        "(shader)(people)",
-        "(ui)(images)",
-    };
-```
-
-Theo sau là một bảng chứa các bundle sẽ được nạp:
-
-```csharp
-    private Dictionary<string, AssetBundle> _bundles;
-```
-
-Bạn có thể thấy trong lúc khởi tạo, chúng ta gọi một hàm tên là
-`preloadBundles`, và sau đây nội dung của nó:
-
-```csharp
-    private void preloadBundles()
-    {
-        _bundles = new Dictionary<string, AssetBundle>();
-        
-        for (int i = 0, c = bundleNames.Length; i < c; ++i)
-        {
-            var bundleName = bundleNames[i];
-
-            string bundlePath;
-
-            // Đường dẫn tới các asset bundle sẽ khác nhau
-            // tùy theo nền tảng, nên ta chia nhánh code.
-
-#if UNITY_IOS || UNITY_EDITOR
-            bundlePath = string.Concat(Application.streamingAssetsPath,
-                "/", bundleName);
-
-#elif UNITY_ANDROID
-            bundlePath = string.Concat(Application.dataPath,
-                "!assets/", bundleName);
-
-#else
-            bundlePath = "";
-#endif
-
-            var bundle = AssetBundle.LoadFromFile(bundlePath);
-            _bundles.Add(bundleName, bundle);
-        }
-    }
-```
-
-Cuối cùng, để truy xuất một asset nhất định, ta có hàm sau đây:
-
-```csharp
-    public T Load<T>(string bundleName, string name)
-        where T : UnityEngine.Object
-    {
-        T obj;
-
-        var bundle = _bundles[bundleName];
-        obj = bundle.LoadAsset<T>(name);
-
-        return obj;
-    }
-```
-
-Ví dụ, ta cần load một tấm hình để đưa vào UI Image. Giả sử tấm hình
-tên là `button_yellon` và bundle có tên là `(ui)(images)` thì code sẽ
-trông từa tựa như sau:
-
-```csharp
-    var sprite = GameAssetManager.Instance.Load<Sprite>(
-        "(ui)(images)", "button_yellow");
-
-    myButtonImage.sprite = sprite;
-)
-```
-
-## Cải tiến
-
-Nội dung của `GameAssetManager` đang trong giai đoạn thô sơ. Nó có một
-số hạn chế như sau:
-
-1. Mỗi lần có thay đổi về asset là phải đóng gói lại mới có thể chạy
-  test, dù chỉ trên editor.
-2. Danh sách bundle đang được để trong code, khó quản lý nếu người làm
-  asset không có thẩm quyền về code.
-
-Nhược điểm số 1 có thể được giải quyết bằng một phiên bản sử dụng
-`AssetDatabase`, hỗ trợ truy cập trực tiếp các asset nếu chạy test trên
-Unity Editor mà không cần đóng gói trước. Phiên bản này được đặt ở cuối bài.
-
-Nhược điểm số 2 có thể được giải quyết bằng cách khai báo một biến dạng
-`SerializedField` và để người làm asset tự quyết định số lượng cũng như tên
-của các bundle cần được tải trong game. Biến này có thể kiểu mảng string,
-hoặc dẫn tới một ScriptableObject để tăng tính khu biệt. Các bạn sẽ là
-người viết phiên bản này nhé, cho tay chân vận động một chút.
-
-Ngoài ra, hàm `LoadAsset` sẽ chạy theo kiểu synchronous. Nghĩa là nếu asset
-tương đối lớn thì game sẽ bị khựng một vài giây. Bạn có thể nghiên cứu
-và chuyển qua xài `LoadAssetAsync` để tối ưu hóa trải nghiệm người dùng.
-
-## Source code tham khảo
-
-```csharp
+using System;
 using System.Collections.Generic;
 using UnityEngine;
-    
+
+#if UNITY_EDITOR
+using UnityEditor;
+#endif
+
+// Thực thể quản lý asset bundle trong game.
+// Chạy ở dạng singleton GameObject.
 public sealed class GameAssetManager : MonoBehaviour
 {
 #if UNITY_EDITOR
-    private const bool useAssetDatabase = true;
+    // Dùng AssetDatabase để truy cập asset mà không cần đóng gói trước.
+    // Chỉ hoạt động trên Unity Editor.
+    // Đặt về false nếu muốn test kết quả đóng gói ngay trên editor.
+    private bool _useAssetDatabase = true;
 #endif
 
-    private static readonly string[] bundleNames =
-    {
-        "(common)",
-        "(model)(islands)",
-        "(model)(people)",
-        "(shader)(plant)",
-        "(shader)(people)",
-        "(ui)(images)",
-    };
+    // Danh sách các bundle trong game. Điền trong Inspector.
+    [SerializeField]
+    private string[] _bundleNames = { };
+
+    // Danh sách các bundle sẽ được load vào game.
+    private List<AssetBundle> _bundles = new List<AssetBundle>();
+
+    // Bảng ánh xạ từ tên asset sang chỉ số của bundle chứa nó.
+    private Dictionary<string, int> _assetNameToBundleIndexDict;
 
     public static GameAssetManager Instance { get; private set; }
-
-    private Dictionary<string, AssetBundle> _bundles;
 
     public void Awake()
     {
@@ -229,72 +325,198 @@ public sealed class GameAssetManager : MonoBehaviour
         }
     }
 
+    // Load các bundle từ persistent storage.
     private void preloadBundles()
     {
-#if UNITY_EDITOR
-        if (useAssetDatabase)
-        {
-            return;
-        }
-#endif
-
-#pragma warning disable CS0162 // Unreachable code detected
-        _bundles = new Dictionary<string, AssetBundle>();
-#pragma warning restore CS0162 // Unreachable code detected
-
-        for (int i = 0, c = bundleNames.Length; i < c; ++i)
-        {
-            var bundleName = bundleNames[i];
-
-#pragma warning disable CS0162 // Unreachable code detected
-            string bundlePath;
-#pragma warning restore CS0162 // Unreachable code detected
-
-#if UNITY_IOS || UNITY_EDITOR
-            bundlePath = string.Concat(Application.streamingAssetsPath, "/", bundleName);
-#elif UNITY_ANDROID
-            bundlePath = string.Concat(Application.dataPath, "!assets/", bundleName);
-#else
-            bundlePath = "";
-#endif
-
-            var bundle = AssetBundle.LoadFromFile(bundlePath);
-            _bundles.Add(bundleName, bundle);
-        }
-    }
-
-    public T Load<T>(string bundleName, string name) where T : UnityEngine.Object
-    {
-        T obj;
+        _assetNameToBundleIndexDict = new Dictionary<string, int>();
 
 #if UNITY_EDITOR
-        if (useAssetDatabase)
+        // Trường hợp chạy editor và bỏ qua việc load bundle đã đóng gói.
+        if (_useAssetDatabase)
         {
-            var paths = UnityEditor.AssetDatabase.GetAssetPathsFromAssetBundleAndAssetName(bundleName, name);
-            if (paths.Length > 0)
+            for (int i = 0, c = _bundleNames.Length; i < c; ++i)
             {
-                var path = UnityEditor.AssetDatabase.GetAssetPathsFromAssetBundleAndAssetName(bundleName, name)[0];
-                obj = UnityEditor.AssetDatabase.LoadAssetAtPath<T>(path);
-            }
-            else
-            {
-                obj = null;
+                var bundleName = _bundleNames[i];
+
+                var assetPathsFromBundle =
+                    AssetDatabase.GetAssetPathsFromAssetBundle(bundleName);
+
+                // Lấy danh sách các asset trong bundle và đưa vào bảng ánh xạ.
+                checkMapAssetNames(assetPathsFromBundle, bundleIndex: i);
             }
         }
+        // Trường hợp không phải editor hoặc không dùng AssetDatabase.
         else
         {
 #endif
+            _bundles = new List<AssetBundle>();
 
-#pragma warning disable CS0162 // Unreachable code detected
-            var bundle = _bundles[bundleName];
-            obj = bundle.LoadAsset<T>(name);
-#pragma warning restore CS0162 // Unreachable code detected
+            for (int i = 0, c = _bundleNames.Length; i < c; ++i)
+            {
+                var bundleName = _bundleNames[i];
+                
+                string bundlePath;
 
+                // Đường dẫn tới các asset bundle sẽ khác nhau
+                // tùy theo nền tảng, nên ta chia nhánh code.
+
+#if UNITY_IOS || UNITY_EDITOR
+                bundlePath = string.Concat(Application.streamingAssetsPath,
+                    "/abs/", bundleName);
+
+#elif UNITY_ANDROID
+                bundlePath = string.Concat(Application.dataPath,
+                    "!assets/abs/", bundleName);
+
+#else
+                bundlePath = "";
+#endif
+
+                var bundle = AssetBundle.LoadFromFile(bundlePath);
+
+                // Lấy danh sách các asset trong bundle vừa load và đưa vào bảng ánh xạ.
+                checkMapAssetNames(bundle.GetAllAssetNames(), bundleIndex: i);
+
+                _bundles.Add(bundle);
+            }
 #if UNITY_EDITOR
         }
 #endif
+    }
 
-        return obj;
+    private void checkMapAssetNames(string[] assetNames, int bundleIndex)
+    {
+        for (int i = 0, n = assetNames.Length; i < n; ++i)
+        {
+            // Asset phải có tên bắt đầu bằng @ thì mới đưa vào bảng.
+            if (calcNameFromPath(assetNames[i], out string name))
+            {
+                // Tên asset không được trùng lặp.
+                if (!_assetNameToBundleIndexDict.ContainsKey(name))
+                {
+                    _assetNameToBundleIndexDict.Add(name, bundleIndex);
+                }
+                else
+                {
+                    throw new InvalidOperationException(
+                        "Duplicated unique asset name: " + name);
+                }
+            }
+        }
+    }
+
+    private bool calcNameFromPath(string path, out string name)
+    {
+        name = path;
+        int lastBackSlashIndex = name.LastIndexOf('/');
+        name = lastBackSlashIndex > 0 ? name.Substring(lastBackSlashIndex + 1) : name;
+        if (name.StartsWith("@"))
+        {
+            int lastDotIndex = name.LastIndexOf('.');
+            name = lastDotIndex > 0 ? name.Substring(0, lastDotIndex) : name;
+            return true;
+        }
+
+        return false;
+    }
+
+    // Hàm load asset từ bundle, nhận tên của asset và trả về dữ liệu tương ứng.
+    public T LoadAsset<T>(string name) where T : UnityEngine.Object
+    {
+        if (!name.StartsWith("@"))
+        {
+            throw new NotSupportedException(
+                "Only support unique name, start with @");
+        }
+
+        if (_assetNameToBundleIndexDict.TryGetValue(name, out int bundleIndex))
+        {
+            return loadAsset<T>(bundleIndex, name);
+        }
+        else
+        {
+            throw new KeyNotFoundException(
+                "Asset name " + name + " is not found");
+        }
+    }
+
+    private T loadAsset<T>(int bundleIndex, string name)
+        where T : UnityEngine.Object
+    {
+#if UNITY_EDITOR
+        if (_useAssetDatabase)
+        {
+            return AssetDatabase.LoadAssetAtPath<T>(
+                AssetDatabase.GetAssetPathsFromAssetBundleAndAssetName(
+                    _bundleNames[bundleIndex], name)[0]);
+        }
+#endif
+        return _bundles[bundleIndex].LoadAsset<T>(name);
+    }
+}
+```
+
+### <a name="source-assetbundlebuilder"></a> AssetBundleBuilder
+
+```csharp
+using System.IO;
+using UnityEditor;
+using UnityEngine;
+
+public class AssetBundleBuilder
+{
+    [MenuItem("anhdev/PreBuild/[ANDROID] Build Asset Bundles")]
+    public static void DoPreBuildStepsForAndroid()
+    {
+        doPreBuildSteps(true);
+    }
+
+    [MenuItem("anhdev/PreBuild/[iOS] Build Asset Bundles")]
+    public static void DoPreBuildStepsForiOS()
+    {
+        doPreBuildSteps(false);
+    }
+
+    private static void doPreBuildSteps(bool isAndroid)
+    {
+        // Tạo thư mục tạm chứa các tập tin đóng gói.
+        string tmpPath = Application.dataPath
+            + "/../_abs_build_tmp/" + (isAndroid ? "Android/" : "iOS/");
+        if (Directory.Exists(tmpPath))
+        {
+            Directory.Delete(tmpPath, recursive: true);
+        }
+        Directory.CreateDirectory(tmpPath);
+
+        // Gọi API đóng gói tùy theo nền tảng.
+        buildAssetBundles(tmpPath, isAndroid ? BuildTarget.Android : BuildTarget.iOS);
+
+        // Chép các tập tin bundle vào StreamingAssets.
+        copyFullToStreamingAssets(tmpPath);
+    }
+
+    private static void buildAssetBundles(string outputPath, BuildTarget target)
+    {
+        if (Directory.Exists(outputPath)) Directory.Delete(outputPath, recursive: true);
+        Directory.CreateDirectory(outputPath);
+
+        BuildPipeline.BuildAssetBundles(outputPath,
+            BuildAssetBundleOptions.ChunkBasedCompression,
+            target);
+    }
+
+    private static void copyFullToStreamingAssets(string sourceFolder)
+    {
+        var absFolder = Path.Combine(Application.streamingAssetsPath, "abs/");
+        if (Directory.Exists(absFolder)) Directory.Delete(absFolder, recursive: true);
+        new DirectoryInfo(absFolder).Create();
+
+        foreach (string child in Directory.GetFiles(sourceFolder))
+        {
+            string fileName = Path.GetFileName(child);
+            if (child.EndsWith(".manifest") || fileName == "abs") continue;
+            File.Copy(child, Path.Combine(absFolder, fileName));
+        }
     }
 }
 ```
